# grm

./: .pdm-python  CLAUDE.md  Makefile  Pipfile  README.md  grm  grm.py  grm.sh  pyproject.toml  setup.py  test_grm.py
grm/: config.py  constants.py  path_rules.py  util.py
grm/_internal/: argparser.py  main.py
src/grm/_internal/: main.py
