[project]
name = "grm"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "jtyers", email = "40065647+jtyers@users.noreply.github.com"},
]
dependencies = ["pyyaml>=6.0.2"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
